--- a/src/posts/recursive-react-components.mdx
+++ b/src/posts/recursive-react-components.mdx
@@ -194,7 +194,7 @@ Here's how that component renders:
 
 I recently rolled out a new feature on my blog - infinite scrolling on the blog list page. This was a fun feature to implement, and I used a recursive component to do it!
 
-The first page blog posts gets rendered server-side,
+The first page of blog posts gets rendered server-side,
 and additional pages of data are fetched and parsed client-side. Additional
 pages are recursively rendered, only after the previous page has been finished and the last element
 has been scrolled into view.
