--- a/src/posts/css-variables-from-custom-tailwind-theme.mdx
+++ b/src/posts/css-variables-from-custom-tailwind-theme.mdx
@@ -21,7 +21,7 @@ This allows you to use the Tailwind build in your legacy codebase, and also give
 > If you missed the first one, it was about [how to use dynamically calculated or user generated values in Tailwind](/blog/using-javascript-variables-in-tailwind).
 
 Throughout this post, I'm going to be using the example of a large, complex application built with a css-in-js approach,
-that's being updated with a new design system and component library built with Tailwind.
+that's being updated with a new design system and component library built with Tailwind. If you prefer, you can skip to **[how to generate CSS variables](#customtailwindplugins)**.
 
 ### The Legacy Code
 
