--- a/src/posts/2023-in-review.mdx
+++ b/src/posts/2023-in-review.mdx
@@ -4,19 +4,28 @@ export const title = "2023 In Review";
 export const slug = "2023-in-review";
 export const tags = [];
 export const description =
-  "A look back on 2023 and the posts I wrote. Thanks for another great year!";
+  "A look back on 2023 and the content I covered on this blog. Thanks for another great year!";
 export const cover = "2023-post-cover-tall.png";
-export const published = new Date(2023, 11, 18);
+export const published = new Date(2023, 11, 15);
 export const shortCodes = ["2023-review"];
 
-As the year winds down, I want to first take a moment to thank you for reading my posts over the last year! This was an exciting year for me, as I started
+As the year winds down, I want to first take a moment to thank you for reading my posts over the last year!
+
+This was an exciting year for me, as I started
 my first role as a principal engineer and learned a ton. I redesigned my website, and started working to build a community around my blog. I also met so
-many great people at conferences and meetups around the country and North America!
+many great people at conferences and meetups around the country and North America, from [Render Atlanta](https://www.renderatl.com/)
+to [Tailwind Connect](https://tailwindcss.com/blog/2023-07-18-tailwind-connect-2023-recap)!
 
-I stopped writing my newsletter after Twitter killed off Revue, but I'm hoping to start it back up again in 2024. I also started a Reddit community
-for discussion of my blog posts. If that's your scene, join me over there!
+![Me and some attendees at Tailwind Connect](tailwind-cropped.png)
 
-## From the Blog
+> Tailwind Connect in Cambridge, Ontario was probably my favorite event of the year!
+
+I stopped writing my newsletter after Twitter killed off Revue, but I'm hoping to start it back up again in 2024. I also started a [Reddit community](https://www.reddit.com/r/keegancodes/)
+for discussion of my blog posts. If that's your scene, [join me over there](https://www.reddit.com/r/keegancodes/)!
+
+## From My Blog
+
+It was a busy year! Here's a quick walk back through all the posts I wrote:
 
 I started off the year writing about [my pull request process](https://keegan.codes/blog/review-your-own-pull-requests) and some approaches I take to writing quality code:
 
@@ -31,7 +40,7 @@ In May, I redesigned the entire site and wrote a bit about [the new NextJS featu
 <PostPreview slug="welcome-to-my-new-blog" />
 
 My most popular post this year was [Mastering React Component Callbacks With Currying](https://keegan.codes/blog/mastering-react-component-callbacks-with-currying) and this
-popularity started my journey of optimizing Google search performance for my blog:
+popularity (especailly with Google search) started my journey of optimizing SEO performance for my blog:
 
 <PostPreview slug="mastering-react-component-callbacks-with-currying" />
 
@@ -54,6 +63,8 @@ Every once in a while, I find a new pattern of building with React that I like, 
 To end the year, I wrote a second installment of my series on Tailwind CSS, [Generating CSS Variables From a Custom Tailwind Theme](https://keegan.codes/blog/generating-css-variables-from-a-custom-tailwind-theme):
 
 <PostPreview slug="generating-css-variables-from-a-custom-tailwind-theme" />
+
+All told, it would take about 109 minutes on average to read everything I wrote over the last year! Hopefully you've been keeping up 😀
 
 ## Happy Holidays!
 
