--- a/src/posts/tracking-previous-prop-values-in-FCs.mdx
+++ b/src/posts/tracking-previous-prop-values-in-FCs.mdx
@@ -111,4 +111,4 @@ Now, get to replacing your effects!
 
 ---
 
-Do you try to focus on avoiding useEffect? Have any tips or soltions of your own? [Join the discussion on X](https://twitter.com/keegandonley)!
+Do you try to focus on avoiding useEffect? Have any tips or soltions of your own? [Join the discussion on X](https://twitter.com/keegandonley/status/1752808056914620479)!
